# unitcellsampling

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  NOTES_CHANGES_AND_TODOS.txt  Pipfile  README.md  README.rst  apply_symmetry.py  apply_symmetry_and_exclude_volume.py  cli.py  compare_grids_points_by_point.py  create_charge_dict_from_lmps.py  energy_calculator.py  estimate_grid_point_calculations.py  exclude_volume.py  gemmi_find_sym_equiv_points.py  get_conventional_structure.py  get_excluded_included_points.py  plane_and_contour_plotting.py  print_structure_properties.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_pip.txt  requirements_pip_tetra.txt  sample.py  setup.cfg  setup.py  test_midvox_ase_grid_sampling.py  tox.ini
AUTOGEN_METHODS/: README.txt  autocreated_methods_ORIGINAL.py  autocreated_methods_no_log.py  autocreated_methods_no_log_no_subdircalc.py  autocreated_methods_no_log_no_subdircalc_BACKUP_BEFORE_CHANGE.py  autocreated_methods_structures_mcloud_rest_WO_duplabels_nolog_nosubdircalc.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
in_development/: cp2k_calculator_trial_reset_idea.py  energy_cutoff.py
scripts/: NEW_MERGED_grid_gen_script.py  analyze_batch.py  (+6 more)
src/gridmc/: .gitignore  Cargo.toml  TODO.md  __init__.py
src/gridmc/benches/: mmc_benchmark.rs
src/gridmc/src/: array2d.rs  ewald.rs  ewald_lumol.rs  io.rs  lib.rs  mathutils.rs  neighbourdisplacer.rs  parseconfig.rs  pointsinsphere.rs  restart.rs  walker.rs
src/gridmc/src/montecarlo/: logger.rs  mod.rs
(+92 files in other folders)
